Dynamically pulling nicknames from DB upon id change and added form validation for empty nicknames

--- a/server-root/public/styles.css
+++ b/server-root/public/styles.css
@@ -5,3 +5,8 @@ body {
 .myclass {
     font-weight: 500;
 }
+
+input[type="text"]:disabled{
+    background-color:rgb(221, 221, 221);
+    color: black;
+}
