entry screen updated for 40 players and styled

--- a/server-root/public/styles.css
+++ b/server-root/public/styles.css
@@ -9,4 +9,14 @@ body {
 input[type="text"]:disabled{
     background-color:rgb(221, 221, 221);
     color: black;
+    border-radius: 2px;
+    border-style:solid;
+}
+
+.px60w {
+    max-width: 60px;
+}
+
+.px300w {
+    min-width: 300px;
 }
